Add Toolbar and Menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
-<body>
-    
+<body class="container">
+    <div class="toolbar">
+        <h2 class="logo">Wahid Shadab</h2>
+        <div class="menu">
+            <div class="menu_item"></div>
+            <div class="menu_item"></div>
+            <div class="menu_item"></div>
+        </div>
+    </div>
+    <section class="headline">
+        <div class="intro">
+            <h1 class="hey">Hey there <br> I'm Shadab</h1>
+            <p class="about">
+                I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                don’t hestiate to contact me.
+            </p>
+        </div>
+        <div class="social_media">
+            <div class="fa"></div>
+            <div class="fa"></div>
+            <div class="fa"></div>
+            <div class="fa"></div>
+            <div class="fa"></div>
+        </div>
+    </section>
 </body>
 </html>
