--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+
 </head>
 <body class="container">
     <div class="toolbar">
@@ -18,18 +22,19 @@
     </div>
     <section class="headline">
         <div class="intro">
-            <h1 class="hey">Hey there <br> I'm Shadab</h1>
+            <h3 class="hey">Hey there <br> I'm Shadab</h3>
+            <p class="iam">I'm a Software Developer</p>
             <p class="about">
                 I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don’t hestiate to contact me.
             </p>
         </div>
         <div class="social_media">
-            <div class="fa"></div>
-            <div class="fa"></div>
-            <div class="fa"></div>
-            <div class="fa"></div>
-            <div class="fa"></div>
+            <div class="fa fa-linkedin fa-2x"></div>
+            <div class="fa fa-github fa-2x"></div>
+            <div class="fa fa-twitter fa-2x"></div>
+            <div class="fa fa-facebook fa-2x"></div>
+            <div class="fa fa-youtube fa-2x"></div>            
         </div>
     </section>
 </body>
