--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 </head>
 <body class="container">
-    <div class="toolbar">
-        <h2 class="logo">Wahid Shadab</h2>
-        <div class="menu">
+    <header class="toolbar">
+        <a class="name">Wahid Shadab</a>
+        <nav class="menu">
             <div class="menu_item"></div>
             <div class="menu_item"></div>
             <div class="menu_item"></div>
-        </div>
-    </div>
+        </nav>
+    </header>
     <section class="headline">
         <div class="intro">
             <h3 class="hey">Hey there <br> I'm Shadab</h3>
@@ -29,13 +29,13 @@
                 don’t hestiate to contact me.
             </p>
         </div>
-        <div class="social_media">
-            <div class="fa fa-linkedin fa-2x"></div>
-            <div class="fa fa-github fa-2x"></div>
-            <div class="fa fa-twitter fa-2x"></div>
-            <div class="fa fa-facebook fa-2x"></div>
-            <div class="fa fa-youtube fa-2x"></div>            
-        </div>
+        <ul class="social_media">
+            <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
+            <li class="fa fa-github fa-2x"><a href="#"></a></li>
+            <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
+            <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
+            <li class="fa fa-youtube fa-2x"><a href="#"></a></li>            
+        </ul>
     </section>
 </body>
 </html>
