Add recent work

--- a/index.html
+++ b/index.html
@@ -37,5 +37,29 @@
             <li class="fa fa-youtube fa-2x"><a href="#"></a></li>            
         </ul>
     </section>
+    <section class="works">
+        <div class="recentworkContainer">
+            <h1 class="recentWork">My Recent Work</h1>
+            <div class="line"></div>
+            <img src="images/recentWork.png" alt="the photo of my recent project">
+            <h3 class="recentWorkTitle">Multi-Post Stories</h3>
+            <p class="recentWorkDesc">A daily selection of privately personalized reads; no accounts or 
+                sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                printer took a standard dummy text.</p>
+            <ul class="usedTechs">
+                <li class="tech">CSS</li>
+                <li class="tech">HTML</li>
+                <li class="tech">Bootstrap</li>
+                <li class="tech">Ruby</li>
+            </ul>
+            <div class="seeProject">
+                <a href="#">See Project</a>
+            </div>
+        </div>
+        <div class="workCard"></div>
+        <div class="workCard"></div>
+        <div class="workCard"></div>
+        <div class="workCard"></div>
+    </section>
 </body>
 </html>
