Add the other 5 works

--- a/index.html
+++ b/index.html
@@ -70,9 +70,77 @@
                 <a href="#">See Project</a>
             </div>
         </div>
-        <div class="workCard"></div>
-        <div class="workCard"></div>
-        <div class="workCard"></div>
+        <div class="workCard">
+            <div class="workCardContent">
+                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
+                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="usedTechs wc">
+                    <li class="tech twc">HTML</li>
+                    <li class="tech twc">Bootstrap</li>
+                    <li class="tech twc">Ruby</li>
+                </ul>
+                </div>
+            <div class="seeProject spwc">
+                <a href="#">See Project</a>
+            </div>
+        </div>
+        <div class="workCard">
+            <div class="workCardContent">
+                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
+                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="usedTechs wc">
+                    <li class="tech twc">HTML</li>
+                    <li class="tech twc">Bootstrap</li>
+                    <li class="tech twc">Ruby</li>
+                </ul>
+                </div>
+            <div class="seeProject spwc">
+                <a href="#">See Project</a>
+            </div>
+        </div>
+        <div class="workCard">
+            <div class="workCardContent">
+                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
+                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="usedTechs wc">
+                    <li class="tech twc">HTML</li>
+                    <li class="tech twc">Bootstrap</li>
+                    <li class="tech twc">Ruby</li>
+                </ul>
+                </div>
+            <div class="seeProject spwc">
+                <a href="#">See Project</a>
+            </div>
+        </div>
+        <div class="workCard">
+            <div class="workCardContent">
+                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
+                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="usedTechs wc">
+                    <li class="tech twc">HTML</li>
+                    <li class="tech twc">Bootstrap</li>
+                    <li class="tech twc">Ruby</li>
+                </ul>
+                </div>
+            <div class="seeProject spwc">
+                <a href="#">See Project</a>
+            </div>
+        </div>
+        <div class="workCard">
+            <div class="workCardContent">
+                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
+                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+                <ul class="usedTechs wc">
+                    <li class="tech twc">HTML</li>
+                    <li class="tech twc">Bootstrap</li>
+                    <li class="tech twc">Ruby</li>
+                </ul>
+                </div>
+            <div class="seeProject spwc">
+                <a href="#">See Project</a>
+            </div>
+        </div>
+        
     </section>
 </body>
 </html>
