--- a/index.html
+++ b/index.html
@@ -139,8 +139,18 @@
             <div class="seeProject spwc">
                 <a href="#">See Project</a>
             </div>
+        </div> 
+    </section>
+    <section class="aboutme">
+        <h3 class="aboutmeTitle">About  me</h3>
+        <p class="aboutmeDesc recentWorkDesc wc">
+            Hello I’m a software developer! I can help you build a product , feature or website Look 
+            through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+        </p>
+        <div class="getResume seeProject">
+            <a href="#">Get My Resume</a>
         </div>
-        
+        <div class="line ab"></div>
     </section>
 </body>
 </html>
