--- a/index.html
+++ b/index.html
@@ -151,6 +151,41 @@
             <a href="#">Get My Resume</a>
         </div>
         <div class="line ab"></div>
+        
+        <div class="skillContainer">
+            <div class="skillCategory">
+                <div class="bullets language"></div>
+                <h1>Language</h1>
+            </div>
+            <ul class="skill">
+                <li class="subSkill">Javascript</li>
+                <li class="subSkill">Ruby</li>
+                <li class="subSkill">HTML</li>
+                <li class="subSkill">CSS</li>
+            </ul>
+            <div class="skillCategory">
+                <div class="bullets"></div>
+                <h1>Frameworks</h1>
+            </div>
+            <ul class="skill">
+                <li class="subSkill">Bootstrap</li>
+                <li class="subSkill">Ruby on Rails</li>
+                <li class="subSkill">RSPec</li>
+                <li class="subSkill">CopyBara</li>
+                <li class="subSkill">Selenium</li>
+            </ul>
+            <div class="skillCategory">
+                <div class="circle"></div>
+                <h1>Skills</h1>
+            </div>
+            <ul class="skill">
+                <li class="subSkill">Codekit</li>
+                <li class="subSkill">Github</li>
+                <li class="subSkill">Codepen</li>
+                <li class="subSkill">Gitlab</li>
+                <li class="subSkill">Terminal</li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
