Add contact me and footer

--- a/index.html
+++ b/index.html
@@ -187,5 +187,24 @@
             </ul>
         </div>
     </section>
+    <section class="contactMe">
+        <p class="contactDesc">I'm always <br> interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <input class="textArea" type="text" placeholder="Full name">
+        <input class="textArea" type="text" placeholder="Email Address">
+        <textarea name="desc" class="desc" cols="30" rows="5" placeholder="Enter Text here"></textarea>
+        <div class="seeProject getInTouchBtn">
+            <a class="getInTouch" href="#">Get in touch</a>
+        </div>
+    </section>
+    <footer>
+        <ul class="social_media">
+            <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
+            <li class="fa fa-github fa-2x"><a href="#"></a></li>
+            <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
+            <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
+            <li class="fa fa-youtube fa-2x"><a href="#"></a></li>            
+        </ul>
+        <div class="footerLine"></div>
+    </footer>
 </body>
 </html>
