--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
     </section>
     <section class="contactMe">
-        <p class="contactDesc">I'm always <br> interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <h3 class="contactDesc">I'm always <br> interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
         <input class="textArea" type="text" placeholder="Full name">
         <input class="textArea" type="text" placeholder="Email Address">
         <textarea name="desc" class="desc" cols="30" rows="5" placeholder="Enter Text here"></textarea>
