Resolve reviewer's comments

--- a/index.html
+++ b/index.html
@@ -1,210 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
-
-</head>
-<body class="container">
+    <link
+      href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body class="container">
     <header class="toolbar">
-        <a class="name">Wahid Shadab</a>
-        <nav class="menu">
-            <div class="menu_item"></div>
-            <div class="menu_item"></div>
-            <div class="menu_item"></div>
-        </nav>
+      <a class="name">Wahid Shadab</a>
+      <nav class="menu">
+        <div class="menu_item"></div>
+        <div class="menu_item"></div>
+        <div class="menu_item"></div>
+      </nav>
     </header>
     <section class="headline">
-        <div class="intro">
-            <h3 class="hey">Hey there <br> I'm Shadab</h3>
-            <p class="iam">I'm a Software Developer</p>
-            <p class="about">
-                I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                don’t hestiate to contact me.
-            </p>
-        </div>
-        <ul class="social_media">
-            <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
-            <li class="fa fa-github fa-2x"><a href="#"></a></li>
-            <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
-            <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
-            <li class="fa fa-youtube fa-2x"><a href="#"></a></li>            
-        </ul>
+      <div class="intro">
+        <h3 class="hey">
+          Hey there <br />
+          I'm Shadab
+        </h3>
+        <p class="iam">I'm a Software Developer</p>
+        <p class="about">
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
+        </p>
+      </div>
+      <ul class="social_media">
+        <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
+        <li class="fa fa-github fa-2x"><a href="#"></a></li>
+        <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
+        <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
+        <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
+      </ul>
     </section>
     <section class="works">
-        <div class="recentworkContainer">
-            <h1 class="recentWork">My Recent Work</h1>
-            <div class="line"></div>
-            <img src="images/recentWork.png" alt="the photo of my recent project">
-            <h3 class="recentWorkTitle">Multi-Post Stories</h3>
-            <p class="recentWorkDesc">A daily selection of privately personalized reads; no accounts or 
-                sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown 
-                printer took a standard dummy text.</p>
-            <ul class="usedTechs">
-                <li class="tech">CSS</li>
-                <li class="tech">HTML</li>
-                <li class="tech">Bootstrap</li>
-                <li class="tech">Ruby</li>
-            </ul>
-            <div class="seeProject">
-                <a href="#">See Project</a>
-            </div>
+      <div class="recentworkContainer">
+        <h1 class="recentWork">My Recent Work</h1>
+        <div class="line"></div>
+        <img src="images/recentWork.png" alt="the photo of my recent project" />
+        <h3 class="recentWorkTitle">Multi-Post Stories</h3>
+        <p class="recentWorkDesc">
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required. has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a standard dummy text.
+        </p>
+        <ul class="usedTechs">
+          <li class="tech">CSS</li>
+          <li class="tech">HTML</li>
+          <li class="tech">Bootstrap</li>
+          <li class="tech">Ruby</li>
+        </ul>
+        <button class="btn">See Project</button>
+      </div>
+      <div class="workCard">
+        <div class="workCardContent">
+          <h3 class="recentWorkTitle wc">
+            Profesional Art <br />Printing Data
+          </h3>
+          <p class="recentWorkDesc wc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="usedTechs wc">
+            <li class="tech twc">HTML</li>
+            <li class="tech twc">Bootstrap</li>
+            <li class="tech twc">Ruby</li>
+          </ul>
         </div>
-        <div class="workCard">
-            <div class="workCardContent">
-                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
-                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                <ul class="usedTechs wc">
-                    <li class="tech twc">HTML</li>
-                    <li class="tech twc">Bootstrap</li>
-                    <li class="tech twc">Ruby</li>
-                </ul>
-                </div>
-            <div class="seeProject spwc">
-                <a href="#">See Project</a>
-            </div>
+        <button class="btn spwc">See Project</button>
+      </div>
+      <div class="workCard">
+        <div class="workCardContent">
+          <h3 class="recentWorkTitle wc">
+            Profesional Art <br />Printing Data
+          </h3>
+          <p class="recentWorkDesc wc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="usedTechs wc">
+            <li class="tech twc">HTML</li>
+            <li class="tech twc">Bootstrap</li>
+            <li class="tech twc">Ruby</li>
+          </ul>
         </div>
-        <div class="workCard">
-            <div class="workCardContent">
-                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
-                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                <ul class="usedTechs wc">
-                    <li class="tech twc">HTML</li>
-                    <li class="tech twc">Bootstrap</li>
-                    <li class="tech twc">Ruby</li>
-                </ul>
-                </div>
-            <div class="seeProject spwc">
-                <a href="#">See Project</a>
-            </div>
+        <button class="btn spwc">See Project</button>
+      </div>
+      <div class="workCard">
+        <div class="workCardContent">
+          <h3 class="recentWorkTitle wc">
+            Profesional Art <br />Printing Data
+          </h3>
+          <p class="recentWorkDesc wc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="usedTechs wc">
+            <li class="tech twc">HTML</li>
+            <li class="tech twc">Bootstrap</li>
+            <li class="tech twc">Ruby</li>
+          </ul>
         </div>
-        <div class="workCard">
-            <div class="workCardContent">
-                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
-                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                <ul class="usedTechs wc">
-                    <li class="tech twc">HTML</li>
-                    <li class="tech twc">Bootstrap</li>
-                    <li class="tech twc">Ruby</li>
-                </ul>
-                </div>
-            <div class="seeProject spwc">
-                <a href="#">See Project</a>
-            </div>
+        <button class="btn spwc">See Project</button>
+      </div>
+      <div class="workCard">
+        <div class="workCardContent">
+          <h3 class="recentWorkTitle wc">
+            Profesional Art <br />Printing Data
+          </h3>
+          <p class="recentWorkDesc wc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="usedTechs wc">
+            <li class="tech twc">HTML</li>
+            <li class="tech twc">Bootstrap</li>
+            <li class="tech twc">Ruby</li>
+          </ul>
         </div>
-        <div class="workCard">
-            <div class="workCardContent">
-                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
-                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                <ul class="usedTechs wc">
-                    <li class="tech twc">HTML</li>
-                    <li class="tech twc">Bootstrap</li>
-                    <li class="tech twc">Ruby</li>
-                </ul>
-                </div>
-            <div class="seeProject spwc">
-                <a href="#">See Project</a>
-            </div>
+        <button class="btn spwc">See Project</button>
+      </div>
+      <div class="workCard">
+        <div class="workCardContent">
+          <h3 class="recentWorkTitle wc">
+            Profesional Art <br />Printing Data
+          </h3>
+          <p class="recentWorkDesc wc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="usedTechs wc">
+            <li class="tech twc">HTML</li>
+            <li class="tech twc">Bootstrap</li>
+            <li class="tech twc">Ruby</li>
+          </ul>
         </div>
-        <div class="workCard">
-            <div class="workCardContent">
-                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
-                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                <ul class="usedTechs wc">
-                    <li class="tech twc">HTML</li>
-                    <li class="tech twc">Bootstrap</li>
-                    <li class="tech twc">Ruby</li>
-                </ul>
-                </div>
-            <div class="seeProject spwc">
-                <a href="#">See Project</a>
-            </div>
+        <button class="btn spwc">See Project</button>
+      </div>
+      <div class="workCard">
+        <div class="workCardContent">
+          <h3 class="recentWorkTitle wc">
+            Profesional Art <br />Printing Data
+          </h3>
+          <p class="recentWorkDesc wc">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul class="usedTechs wc">
+            <li class="tech twc">HTML</li>
+            <li class="tech twc">Bootstrap</li>
+            <li class="tech twc">Ruby</li>
+          </ul>
         </div>
-        <div class="workCard">
-            <div class="workCardContent">
-                <h3 class="recentWorkTitle wc">Profesional Art <br>Printing Data</h3>
-                <p class="recentWorkDesc wc">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-                <ul class="usedTechs wc">
-                    <li class="tech twc">HTML</li>
-                    <li class="tech twc">Bootstrap</li>
-                    <li class="tech twc">Ruby</li>
-                </ul>
-                </div>
-            <div class="seeProject spwc">
-                <a href="#">See Project</a>
-            </div>
-        </div> 
+        <button class="btn spwc">See Project</button>
+      </div>
     </section>
     <section class="aboutme">
-        <h3 class="aboutmeTitle">About  me</h3>
-        <p class="aboutmeDesc recentWorkDesc wc">
-            Hello I’m a software developer! I can help you build a product , feature or website Look 
-            through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
-        </p>
-        <div class="getResume seeProject">
-            <a href="#">Get My Resume</a>
-        </div>
-        <div class="line ab"></div>
-        
-        <div class="skillContainer">
-            <div class="skillCategory">
-                <div class="bullets language"></div>
-                <h1>Language</h1>
-            </div>
-            <ul class="skill">
-                <li class="subSkill">Javascript</li>
-                <li class="subSkill">Ruby</li>
-                <li class="subSkill">HTML</li>
-                <li class="subSkill">CSS</li>
-            </ul>
-            <div class="skillCategory">
-                <div class="bullets"></div>
-                <h1>Frameworks</h1>
-            </div>
-            <ul class="skill">
-                <li class="subSkill">Bootstrap</li>
-                <li class="subSkill">Ruby on Rails</li>
-                <li class="subSkill">RSPec</li>
-                <li class="subSkill">CopyBara</li>
-                <li class="subSkill">Selenium</li>
-            </ul>
-            <div class="skillCategory">
-                <div class="circle"></div>
-                <h1>Skills</h1>
-            </div>
-            <ul class="skill">
-                <li class="subSkill">Codekit</li>
-                <li class="subSkill">Github</li>
-                <li class="subSkill">Codepen</li>
-                <li class="subSkill">Gitlab</li>
-                <li class="subSkill">Terminal</li>
-            </ul>
-        </div>
+      <h3 class="aboutmeTitle">About me</h3>
+      <p class="aboutmeDesc recentWorkDesc wc">
+        Hello I’m a software developer! I can help you build a product , feature
+        or website Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+      <button class="btn getResume">Get My Resume</button>
+      <div class="line ab"></div>
+
+      <ul class="skillContainer">
+        <li class="skillCategory">
+          <div class="bullets language"></div>
+          <h1>Language</h1>
+        </li>
+        <ul class="skill">
+          <li class="subSkill">Javascript</li>
+          <li class="subSkill">Ruby</li>
+          <li class="subSkill">HTML</li>
+          <li class="subSkill">CSS</li>
+        </ul>
+        <li class="skillCategory">
+          <div class="bullets"></div>
+          <h1>Frameworks</h1>
+        </li>
+        <ul class="skill">
+          <li class="subSkill">Bootstrap</li>
+          <li class="subSkill">Ruby on Rails</li>
+          <li class="subSkill">RSPec</li>
+          <li class="subSkill">CopyBara</li>
+          <li class="subSkill">Selenium</li>
+        </ul>
+        <li class="skillCategory">
+          <div class="circle"></div>
+          <h1>Skills</h1>
+        </li>
+        <ul class="skill">
+          <li class="subSkill">Codekit</li>
+          <li class="subSkill">Github</li>
+          <li class="subSkill">Codepen</li>
+          <li class="subSkill">Gitlab</li>
+          <li class="subSkill">Terminal</li>
+        </ul>
+      </ul>
     </section>
     <section class="contactMe">
-        <h3 class="contactDesc">I'm always <br> interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-        <input class="textArea" type="text" placeholder="Full name">
-        <input class="textArea" type="text" placeholder="Email Address">
-        <textarea name="desc" class="desc" cols="30" rows="5" placeholder="Enter Text here"></textarea>
-        <div class="seeProject getInTouchBtn">
-            <a class="getInTouch" href="#">Get in touch</a>
-        </div>
+      <h3 class="contactDesc">
+        I'm always <br />
+        interested in hearing about new projects, so if you'd like to chat
+        please get in touch.
+      </h3>
+      <input class="textArea" type="text" placeholder="Full name" />
+      <input class="textArea" type="text" placeholder="Email Address" />
+      <textarea
+        name="desc"
+        class="desc"
+        cols="30"
+        rows="5"
+        placeholder="Enter Text here"
+      ></textarea>
+      <button class="btn getInTouchBtn">Get in touch</button>
     </section>
     <footer>
-        <ul class="social_media">
-            <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
-            <li class="fa fa-github fa-2x"><a href="#"></a></li>
-            <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
-            <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
-            <li class="fa fa-youtube fa-2x"><a href="#"></a></li>            
-        </ul>
-        <div class="footerLine"></div>
+      <ul class="social_media">
+        <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
+        <li class="fa fa-github fa-2x"><a href="#"></a></li>
+        <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
+        <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
+        <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
+      </ul>
+      <div class="footerLine"></div>
     </footer>
-</body>
+  </body>
 </html>
