--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="tech">Bootstrap</li>
           <li class="tech">Ruby</li>
         </ul>
-        <button class="btn">See Project</button>
+        <button class="btn" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -79,7 +79,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc">See Project</button>
+        <button class="btn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -96,7 +96,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc">See Project</button>
+        <button class="btn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -113,7 +113,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc">See Project</button>
+        <button class="btn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -130,7 +130,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc">See Project</button>
+        <button class="btn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -147,7 +147,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc">See Project</button>
+        <button class="btn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -164,7 +164,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc">See Project</button>
+        <button class="btn spwc" type="button">See Project</button>
       </div>
     </section>
     <section class="aboutme">
@@ -174,7 +174,7 @@
         or website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <button class="btn getResume">Get My Resume</button>
+      <button class="btn getResume" type="button">Get My Resume</button>
       <div class="line ab"></div>
 
       <ul class="skillContainer">
@@ -182,34 +182,40 @@
           <div class="bullets language"></div>
           <h1>Language</h1>
         </li>
-        <ul class="skill">
-          <li class="subSkill">Javascript</li>
-          <li class="subSkill">Ruby</li>
-          <li class="subSkill">HTML</li>
-          <li class="subSkill">CSS</li>
-        </ul>
+        <li class="skillCategory">
+          <ul class="skill">
+            <li class="subSkill">Javascript</li>
+            <li class="subSkill">Ruby</li>
+            <li class="subSkill">HTML</li>
+            <li class="subSkill">CSS</li>
+          </ul>
+        </li>
         <li class="skillCategory">
           <div class="bullets"></div>
           <h1>Frameworks</h1>
         </li>
-        <ul class="skill">
-          <li class="subSkill">Bootstrap</li>
-          <li class="subSkill">Ruby on Rails</li>
-          <li class="subSkill">RSPec</li>
-          <li class="subSkill">CopyBara</li>
-          <li class="subSkill">Selenium</li>
-        </ul>
+        <li class="skillCategory">
+          <ul class="skill">
+            <li class="subSkill">Bootstrap</li>
+            <li class="subSkill">Ruby on Rails</li>
+            <li class="subSkill">RSPec</li>
+            <li class="subSkill">CopyBara</li>
+            <li class="subSkill">Selenium</li>
+          </ul>
+        </li>
         <li class="skillCategory">
           <div class="circle"></div>
           <h1>Skills</h1>
         </li>
-        <ul class="skill">
-          <li class="subSkill">Codekit</li>
-          <li class="subSkill">Github</li>
-          <li class="subSkill">Codepen</li>
-          <li class="subSkill">Gitlab</li>
-          <li class="subSkill">Terminal</li>
-        </ul>
+        <li class="skillCategory">
+          <ul class="skill">
+            <li class="subSkill">Codekit</li>
+            <li class="subSkill">Github</li>
+            <li class="subSkill">Codepen</li>
+            <li class="subSkill">Gitlab</li>
+            <li class="subSkill">Terminal</li>
+          </ul>
+        </li>
       </ul>
     </section>
     <section class="contactMe">
@@ -227,7 +233,7 @@
         rows="5"
         placeholder="Enter Text here"
       ></textarea>
-      <button class="btn getInTouchBtn">Get in touch</button>
+      <button class="btn getInTouchBtn" type="button">Get in touch</button>
     </section>
     <footer>
       <ul class="social_media">
