Update CSS and HTML

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="tech">Bootstrap</li>
           <li class="tech">Ruby</li>
         </ul>
-        <button class="btn" type="button">See Project</button>
+        <button class="mybtn" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -79,7 +79,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc" type="button">See Project</button>
+        <button class="mybtn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -96,7 +96,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc" type="button">See Project</button>
+        <button class="mybtn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -113,7 +113,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc" type="button">See Project</button>
+        <button class="mybtn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -130,7 +130,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc" type="button">See Project</button>
+        <button class="mybtn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -147,7 +147,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc" type="button">See Project</button>
+        <button class="mybtn spwc" type="button">See Project</button>
       </div>
       <div class="workCard">
         <div class="workCardContent">
@@ -164,7 +164,7 @@
             <li class="tech twc">Ruby</li>
           </ul>
         </div>
-        <button class="btn spwc" type="button">See Project</button>
+        <button class="mybtn spwc" type="button">See Project</button>
       </div>
     </section>
     <section class="aboutme">
@@ -174,7 +174,7 @@
         or website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <button class="btn getResume" type="button">Get My Resume</button>
+      <button class="mybtn getResume" type="button">Get My Resume</button>
       <div class="line ab"></div>
 
       <ul class="skillContainer">
@@ -233,7 +233,7 @@
         rows="5"
         placeholder="Enter Text here"
       ></textarea>
-      <button class="btn getInTouchBtn" type="button">Get in touch</button>
+      <button class="mybtn getInTouchBtn" type="button">Get in touch</button>
     </section>
     <footer>
       <ul class="social_media">
