Update footer to myfooter

--- a/index.html
+++ b/index.html
@@ -236,14 +236,16 @@
       <button class="mybtn getInTouchBtn" type="button">Get in touch</button>
     </section>
     <footer>
-      <ul class="social_media">
-        <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
-        <li class="fa fa-github fa-2x"><a href="#"></a></li>
-        <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
-        <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
-        <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
-      </ul>
-      <div class="footerLine"></div>
+      <div class="myfooter">
+        <ul class="social_media">
+          <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
+          <li class="fa fa-github fa-2x"><a href="#"></a></li>
+          <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
+          <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
+          <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
+        </ul>
+        <div class="footerLine"></div>
+      </div>
     </footer>
   </body>
 </html>
