--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         interested in hearing about new projects, so if you'd like to chat
         please get in touch.
       </h3>
-      <input class="textArea" type="text" placeholder="Full name" />
-      <input class="textArea" type="text" placeholder="Email Address" />
+      <input class="mytextArea" type="text" placeholder="Full name" />
+      <input class="mytextArea" type="text" placeholder="Email Address" />
       <textarea
         name="desc"
         class="desc"
