--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="container">
     <header class="toolbar">
-      <a class="name">Wahid Shadab</a>
+      <a class="name" href="#">Wahid Shadab</a>
       <nav class="menu">
         <div class="menu_item"></div>
         <div class="menu_item"></div>
