--- a/index.html
+++ b/index.html
@@ -214,5 +214,13 @@
         </li>
       </ul>
     </section>
+    <section class="contactMe">
+      <h3 class="contactDesc">
+        I'm always <br />
+        interested in hearing about new projects, so if you'd like to chat
+        please get in touch.
+      </h3>
+      <form action="" class=""></form>
+    </section>
   </body>
 </html>
