--- a/index.html
+++ b/index.html
@@ -220,7 +220,21 @@
         interested in hearing about new projects, so if you'd like to chat
         please get in touch.
       </h3>
-      <form action="" class=""></form>
+      <form action="/my-handling-form-page" method="post" class="form">
+        <ul>
+          <li>
+            <input type="text" name="Fullname" placeholder="Full name" maxlength="30">
+          </li>
+          <li>
+            <input type="email" name="mail" placeholder="Email address">
+          </li>
+          <li>
+          <textarea placeholder="Enter text here" maxlength="500" name="comments"></textarea>
+          </li>
+          <button type="submit">Get in touch</button>
+         
+        </ul>
+      </form>
     </section>
   </body>
 </html>
