Create the footer

--- a/index.html
+++ b/index.html
@@ -247,5 +247,17 @@
         <button class="mybtn getInTouchBtn" type="submit">Get in touch</button>
       </form>
     </section>
+    <hr>
+    <footer class="footer">
+    
+      <ul class="social_media last-part">
+        <li class=" fa fa-linkedin fa-lg last-part"><a href="#"></a></li>
+        <li class=" fa fa-github fa-lg last-part"><a href="#"></a></li>
+        <li class=" fa fa-twitter fa-lg last-part"><a href="#"></a></li>
+        <li class=" fa fa-facebook fa-lg last-part"><a href="#"></a></li>
+        <li class=" fa fa-youtube fa-lg last-part"><a href="#"></a></li>
+      </ul>
+      <div class="last-line"></div>
+    </footer>
   </body>
 </html>
