Resolve linters errors

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
       <form action="https://formspree.io/f/xpzkoeda" method="post" class="form">
         <ul>
           <li>
-            <input class="mytextArea"
+            <input
+              class="mytextArea"
               required
               type="text"
               name="Fullname"
@@ -232,11 +233,17 @@
             />
           </li>
           <li>
-            <input class="mytextArea" required type="email" name="mail" placeholder="Email address" />
+            <input
+              class="mytextArea"
+              required
+              type="email"
+              name="mail"
+              placeholder="Email address"
+            />
           </li>
           <li>
             <textarea
-            required
+              required
               class="desc"
               cols="30"
               rows="5"
@@ -249,16 +256,15 @@
         <button class="mybtn getInTouchBtn" type="submit">Get in touch</button>
       </form>
     </section>
-    <footer class="footer">
-      <div class="myfooter">
-        <ul class="social_media">
-          <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
-          <li class="fa fa-github fa-2x"><a href="#"></a></li>
-          <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
-          <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
-          <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
-        </ul>
-        <div class="footerLine"></div>
+    <footer class="myfooter">
+      <ul class="social_media">
+        <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
+        <li class="fa fa-github fa-2x"><a href="#"></a></li>
+        <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
+        <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
+        <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
+      </ul>
+      <div class="footerLine"></div>
     </footer>
   </body>
 </html>
